Mutation observers doesn't get notified of character data mutation made by the parser https://bugs.webkit.org/show_bug.cgi?id=191874

Reviewed by Antti Koivisto.

Source/WebCore:

Fixed the bug that CharacterData::parserAppendData was never notifying MutationObserver.

Test: fast/dom/MutationObserver/observe-parser-character-data-change.html

* dom/CharacterData.cpp:
(WebCore::CharacterData::parserAppendData):

LayoutTests:

Added a regression test.

* fast/dom/MutationObserver/observe-parser-character-data-change-expected.txt: Added.
* fast/dom/MutationObserver/observe-parser-character-data-change.html: Added.


Canonical link: https://commits.webkit.org/206599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238429 268f45cc-cd09-0410-ab3c-d52691b4dbfc